--- a/loha_auto_taxi_stand_ms/assets/css/styles.css
+++ b/loha_auto_taxi_stand_ms/assets/css/styles.css
@@ -117,6 +117,14 @@ header a {
   display: block;
 }
 
+.Dashboard {
+  height: 92vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url("../images/system_images/pexels-jake-heinemann-2399254.jpg");
+  background-size: cover;
+}
+.Dashboard h3 {
+  color: #fff;
+}
 .Dashboard .stats {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -142,6 +150,25 @@ header a {
 .Dashboard .stats .stat span:nth-of-type(3) {
   font-size: 0.9em;
   text-transform: uppercase;
+}
+.Dashboard .stats .stat:nth-of-type(2) {
+  background: black;
+  color: white;
+}
+.Dashboard .stats .stat:nth-of-type(3) {
+  background: purple;
+  color: #fff;
+}
+.Dashboard .stats .stat:nth-of-type(4) {
+  background: pink;
+}
+
+.Vehicles {
+  height: 92vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url("../images/system_images/tuktuk_vehicles.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .Receipt .container .receipt_wrapper {
