--- a/housemanager_portal/assets/css/styles.css
+++ b/housemanager_portal/assets/css/styles.css
@@ -44,9 +44,12 @@
   align-items: center;
   height: 100%;
 }
-.Login .row .image img {
+.Login .row .image {
   width: 100%;
   height: 100%;
+  background: linear-gradient(120deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0)), url("../images/system_images/househelp.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 .Signup {
