--- a/housemanager_portal/assets/css/styles.scss
+++ b/housemanager_portal/assets/css/styles.scss
@@ -52,10 +52,12 @@
     align-items: center;
     height: 100%;
     .image {
-      img {
         width: 100%;
         height: 100%;
-      }
+      background: linear-gradient(120deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0)),
+        url("../images/system_images/househelp.jpg");
+      background-size: cover;
+      background-position: center;
     }
   }
 }
